# handshake

./: .gitignore  CMakeLists.txt  EftDef.h  dbg.h  def.h  flutter.md  generateHash  generateHash.c  generateHash.sh  keyCheck  keyCheck.c  keyCheck.sh  macbuild.sh  parseIso  reverse_xor.py  run.sh  tamsResponse.xml  test.sh  unpack.c  unpack.sh  xor.sh
c8583/: C8583.c  C8583.h  C8583Algorithm.c  C8583Algorithm.h  C8583Bitmap.c  C8583Bitmap.h  C8583Config.c  C8583Config.h  C8583Utils.c  C8583Utils.h  FieldNames.h
cJSON/: cJSON.c  cJSON.h  cJSON_Utils.c  cJSON_Utils.h
des/: des.c  des.h
doc/: ISO.MD  aid.MD  auto-prep.md  callhome.json  profile-mini.json  profile-old.json  profile.json  tamsGetParameters.xml  transfer.json
ezxml/: ezxml.c  ezxml.h
inc/: handshake.h  handshake_internals.h  handshake_utils.h
platform/: comms.c  comms.h  getState.c  getState.h  itexUtils.c  itexUtils.h  platform.h  utils.c  utils.h
rc4/: rc4.c  rc4.h
sha256/: sha256.c  sha256.h
src/: handshake.c  handshake.h  handshake_getDeviceConfig.c  handshake_internals.h  handshake_mapDevice.c  handshake_maptid.c  handshake_nibss.c  handshake_print.c  handshake_tams.c  handshake_utils.c
tests/: handshake_tests.c  minunit.h
